# vEngine

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md
core/: Application.cpp  Application.hpp  CMakeLists.txt
core/cmake/: UnitTests.cmake
core/logging/: Logger.hpp
core/managers/: CMakeLists.txt  GlobalRegister.cpp  GlobalRegister.hpp  IManager.hpp  LogManager.cpp  LogManager.hpp  LoggerManager.cpp  LoggerManager.hpp  Singleton.hpp  WindowManager.hpp
core/managers/LoggerManager/: ILoggerManager.hpp  LoggerManager.cpp  LoggerManager.hpp
core/managers/LoggerManager/tests/: CMakeLists.txt
core/managers/LoggerManager/tests/mocks/: LoggerManagerMock.cpp  LoggerManagerMock.hpp
core/managers/WindowManager/: IWindowManager.hpp  WindowManager.cpp  WindowManager.hpp
core/managers/WindowManager/tests/: CMakeLists.txt
core/managers/WindowManager/tests/mocks/: WindowManagerMock.cpp  WindowManagerMock.hpp
core/managers/tests/: CMakeLists.txt  GlobalRegister_tests.cpp
core/renderer/: Renderer.hpp
core/utils/: Singleton.hpp  Timer.hpp
core/window/: IWindow.hpp  WindowFactory.cpp  WindowFactory.hpp
core/window/linux/: WindowImpl.cpp  WindowImpl.hpp
scripts/: build_and_run_all_uts.sh
